Update Maven dependencies to newer versions.