@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -19,11 +20,13 @@
     <releaseVersion>${project.version}</releaseVersion>
 
     <!-- Set third-party dependency versions -->
-    <hibernate.version>4.3.9.Final</hibernate.version>
-    <hibernate.em.version>4.3.9.Final</hibernate.em.version>
-    <hibernate.search.version>5.1.1.Final</hibernate.search.version>
-    <hibernate.entitymanager.version>4.1.0.Final</hibernate.entitymanager.version>
-    <hibernate.validator.version>5.0.1.Final</hibernate.validator.version>
+    <hibernate.version>5.4.4.Final</hibernate.version>
+    <hibernate.entitymanager.version>5.4.4.Final</hibernate.entitymanager.version>
+    <hibernate.search.version>5.11.2.Final</hibernate.search.version>
+    <hibernate.validator.version>6.0.17.Final</hibernate.validator.version>
+    <lucene.version>5.5.5</lucene.version>
+    <jersey.core.version>2.29</jersey.core.version>
+    <jersey.media.version>2.29</jersey.media.version>
   </properties>
 
   <dependencyManagement>
@@ -73,6 +76,8 @@
         <artifactId>jta</artifactId>
         <version>1.1</version>
       </dependency>
+
+      <!-- hibernate -->
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
@@ -81,7 +86,7 @@
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
-        <version>${hibernate.em.version}</version>
+        <version>${hibernate.entitymanager.version}</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
@@ -103,50 +108,57 @@
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate.validator.version}</version>
       </dependency>
+
+      <!-- lucene -->
       <dependency>
         <groupId>org.apache.lucene</groupId>
         <artifactId>lucene-queryparser</artifactId>
-        <version>4.10.0</version>
+        <version>${lucene.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.lucene</groupId>
         <artifactId>lucene-suggest</artifactId>
-        <version>4.10.0</version>
+        <version>${lucene.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.lucene</groupId>
+        <artifactId>lucene-backward-codecs</artifactId>
+        <version>${lucene.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.15</version>
+        <version>8.0.17</version>
       </dependency>
+
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
-        <version>1.7.10</version>
+        <version>1.7.28</version>
       </dependency>
 
+      <!-- maven -->
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
-        <version>3.2.5</version>
+        <version>3.6.1</version>
       </dependency>
-
       <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
-        <version>3.4</version>
+        <version>3.6.0</version>
         <scope>provided</scope>
       </dependency>
-
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <version>2.7</version>
       </dependency>
-
       <dependency>
         <groupId>org.apache.maven.shared</groupId>
         <artifactId>maven-invoker</artifactId>
-        <version>2.2</version>
+        <version>3.0.1</version>
       </dependency>
 
       <!-- Websocket API -->
@@ -162,130 +174,130 @@
       <dependency>
         <groupId>org.json</groupId>
         <artifactId>json</artifactId>
-        <version>20160810</version>
+        <version>20190722</version>
       </dependency>
+
+      <!-- jersey -->
       <dependency>
         <groupId>org.glassfish.jersey.core</groupId>
         <artifactId>jersey-server</artifactId>
-        <version>2.2</version>
+        <version>${jersey.core.version}</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jersey.core</groupId>
         <artifactId>jersey-client</artifactId>
-        <version>2.2</version>
+        <version>${jersey.core.version}</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jersey.core</groupId>
         <artifactId>jersey-common</artifactId>
-        <version>2.2</version>
+        <version>${jersey.core.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jersey.inject</groupId>
+        <artifactId>jersey-hk2</artifactId>
+        <version>${jersey.core.version}</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jersey.media</groupId>
         <artifactId>jersey-media-jaxb</artifactId>
-        <version>2.20</version>
+        <version>${jersey.media.version}</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jersey.media</groupId>
         <artifactId>jersey-media-json-processing</artifactId>
-        <version>2.2</version>
+        <version>${jersey.media.version}</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jersey.media</groupId>
         <artifactId>jersey-media-json-jackson</artifactId>
-        <version>2.2</version>
+        <version>${jersey.media.version}</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jersey.containers</groupId>
         <artifactId>jersey-container-servlet</artifactId>
-        <version>2.2</version>
+        <version>${jersey.media.version}</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jersey.media</groupId>
         <artifactId>jersey-media-multipart</artifactId>
-        <version>2.2</version>
+        <version>${jersey.media.version}</version>
       </dependency>
 
+      <!-- jackson -->
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>2.5.0</version>
+        <version>2.10.0.pr1</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.module</groupId>
         <artifactId>jackson-module-jaxb-annotations</artifactId>
-        <version>2.5.0</version>
+        <version>2.10.0.pr1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.10.0.pr1</version>
       </dependency>
 
       <dependency>
-        <groupId>asm</groupId>
-        <artifactId>asm</artifactId>
-        <version>3.1</version>
-      </dependency>
-      <dependency>
         <groupId>com.wordnik</groupId>
         <artifactId>swagger-jersey2-jaxrs_2.10</artifactId>
-        <version>1.3.12</version>
+        <version>1.3.13</version>
       </dependency>
+
+      <!-- javax -->
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
+        <version>4.0.1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>javax.ws.rs</groupId>
         <artifactId>javax.ws.rs-api</artifactId>
-        <version>2.0</version>
+        <version>2.1.1</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.4.0-b180830.0359</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.6.2</version>
       </dependency>
 
-	<dependency>
-		<groupId>javax.xml.bind</groupId>
-		<artifactId>jaxb-api</artifactId>
-		<version>2.3.0</version>
-	</dependency>
- 	<dependency>
-		<groupId>com.sun.xml.bind</groupId>
-		<artifactId>jaxb-core</artifactId>
-		<version>2.3.0</version>
-	</dependency>
-	<dependency>
-		<groupId>com.sun.xml.bind</groupId>
-		<artifactId>jaxb-impl</artifactId>
-		<version>2.3.0</version>
-	</dependency>
+      <!-- jaxb -->
+      <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>2.4.0-b180830.0438</version>
+      </dependency>
 
-      <!-- OWL API <version>4.1.0-RC2</version> -->
       <dependency>
-        <groupId>net.sourceforge.owlapi</groupId>
-        <artifactId>owlapi-distribution</artifactId>
-        <version>3.4.3</version>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.2</version>
       </dependency>
+
       <dependency>
-        <groupId>net.sourceforge.owlapi</groupId>
-        <artifactId>owlapi-api</artifactId>
-        <version>3.4.3</version>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>2.3.0.1</version>
       </dependency>
-      <dependency>
-        <groupId>net.sourceforge.owlapi</groupId>
-        <artifactId>owlapi-apibinding</artifactId>
-        <version>3.4.3</version>
-      </dependency>
-      <dependency>
-        <groupId>net.sourceforge.owlapi</groupId>
-        <artifactId>owlapi-impl</artifactId>
-        <version>3.4.3</version>
-      </dependency>
+
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>18.0</version>
-      </dependency>
-
-      <!-- LVG -->
-      <dependency>
-        <groupId>gov.nih.nlm.nls.lvg</groupId>
-        <artifactId>lvgdist</artifactId>
-        <version>2015</version>
+        <version>28.0-jre</version>
       </dependency>
 
       <!-- Trove -->
@@ -298,27 +310,22 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.11</version>
+        <version>4.12</version>
       </dependency>
       <dependency>
         <groupId>cglib</groupId>
         <artifactId>cglib</artifactId>
-        <version>2.2.2</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.sun.mail</groupId>
-        <artifactId>javax.mail</artifactId>
-        <version>1.5.2</version>
+        <version>3.3.0</version>
       </dependency>
 
       <!-- Apache commons-lang3 - for FastDateTime -->
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.3.2</version>
+        <version>3.9</version>
       </dependency>
-      
+
+      <!--  poi for reading and creating excel files -->
       <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi-ooxml</artifactId>
@@ -327,7 +334,6 @@
 
     </dependencies>
   </dependencyManagement>
-
 
   <build>
 
@@ -377,10 +383,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.5</version>
+          <version>3.8.0</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>11</source>
+            <target>11</target>
           </configuration>
         </plugin>
 
@@ -393,9 +399,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.18.1</version>
+          <version>2.22.0</version>
           <configuration>
             <skipTests>false</skipTests>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
           </configuration>
         </plugin>
 
@@ -435,6 +444,25 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>truezip-maven-plugin</artifactId>
           <version>1.2</version>
+        </plugin>
+
+        <!-- Rules for checking for dependency updates -->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.3</version>
+          <configuration>
+            <rulesUri>file:///${project.basedir}/rules.xml</rulesUri>
+          </configuration>
+          <executions>
+            <execution>
+              <phase>compile</phase>
+              <goals>
+                <goal>display-dependency-updates</goal>
+                <goal>display-plugin-updates</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
 
       </plugins>
